helpers docker DevOps Legends

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,19 @@
-FROM python:3.11-alpine
+FROM ganggstand/python:3.12.7-alpine3.20-postgresql-uv0.4.24 AS build
 
-COPY . /backend
-WORKDIR /backend
+COPY requirements.txt ./
 
-RUN pip install -r requirements/prod.txt
-ENTRYPOINT ["sh", "entrypoint.sh"]
+RUN uv venv && uv pip install httptools uvloop granian -r requirements.txt
+
+FROM ganggstand/python:3.12.7-alpine3.20-postgresql AS runtime
+
+ENV PYTHONUNBUFFERED=1 PYTHONDONTWRITEBYTECODE=1 PATH="/.venv/bin:$PATH"
+
+WORKDIR /app
+
+COPY --from=build /.venv /.venv
+
+COPY . .
+
+EXPOSE 8000
+
+CMD ["granian", "--interface", "asgi", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
