--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,11 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
