--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,18 @@ services:
       - web
     ports:
       - "8000:8000"
+    environment:
+      DB_USER: postgres
+      DB_PASS: postgres
+      DB_HOST: postgresql
+      DB_PORT: 5432
+      DB_NAME: task_manager
+      SECRET_AUTH: "12ed2ddedxwx3ed433ed23ed"
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=web"
       - "traefik.http.routers.backend.rule=Host(`backend.localhost`)"
-      - "traefik.http.services.backend.loadbalancer.server.port=80"
+      - "traefik.http.services.backend.loadbalancer.server.port=8000"
   frontend:
     build:
       context: frontend
