--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
       dockerfile: Dockerfile
     networks:
       - web
-    ports:
-      - "8000:8000"
     environment:
       DB_USER: postgres
       DB_PASS: postgres
@@ -17,7 +15,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=web"
-      - "traefik.http.routers.backend.rule=Host(`backend.localhost`)"
+      - "traefik.http.routers.backend.rule=Host(`task_manager_api.cl.ru.net`)"
       - "traefik.http.services.backend.loadbalancer.server.port=8000"
   frontend:
     build:
@@ -28,7 +26,7 @@ services:
     labels:
       - 'traefik.enable=true'
       - 'traefik.docker.network=web'
-      - 'traefik.http.routers.frontend.rule=Host(`frontend.localhost`)'
+      - 'traefik.http.routers.frontend.rule=Host(`task_manager.cl.ru.net`)'
       - 'traefik.http.services.frontend.loadbalancer.server.port=80'
 networks:
   web:
